Reworked food production and consumption, added taxation and population for all buildings